Work and skills updates

--- a/Index.html
+++ b/Index.html
@@ -21,14 +21,15 @@
         <link href="http://www.gregduncan.co.uk" rel="canonical" />
         <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-        <link href="css/bootstrap-3.0.css" rel="stylesheet" />
-        <link href="css/site.css" rel="stylesheet" />
-        <link href="css/site-responsive.css" rel="stylesheet" />
         <link href="images/ico/favicon.ico" rel="shortcut icon" />
         <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png" />
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png" />
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png" />
         <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png" />
+        <!-- Source files have been left uncompressed for your viewing -->
+        <link href="css/bootstrap-3.0.css" rel="stylesheet" />
+        <link href="css/site.css" rel="stylesheet" />
+        <link href="css/site-responsive.css" rel="stylesheet" />
         <script src="scripts/libs/jquery-1.9.1.js"></script>
         <script src="scripts/libs/angular.js"></script>
         <script src="scripts/libs/angular-route.js"></script>
@@ -70,7 +71,7 @@
                     </div>
                     <div class="col-md-3">
                         <div class="sidebar overflow">
-                            <h2>Welcome to my website. Here you can find info on my latest projects, previous work, GDCDs and other stuff...</h2>
+                            <h2>Welcome to my website. Here you can find info on my latest projects, previous work, skills and the infamous GDCDs...</h2>
                             <h3>recommends</h3>
                             <div class="recommends">
                                 <a href="http://www.wearevillagers.com/"></a>
@@ -87,7 +88,7 @@
                                     <textarea>Message</textarea>
                                 </li>
                                 <li>
-                                    <a class="btn">send</a>
+                                    <a class="btn btn-default">Send</a>
                                 </li>
                             </ul>
                         </div>
