--- a/Index.html
+++ b/Index.html
@@ -36,6 +36,7 @@
         <script src="scripts/libs/angular-animate.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/tracksCtrl.js"></script>
+        <script src="scripts/controllers/contactCtrl.js"></script>
         <script src="scripts/directives/navMenu.js"></script>
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -46,16 +47,16 @@
             <div class="navbar">
                 <ul class="nav overflow" nav-menu="active">
                     <li>
-                        <a id="home" href="#">home</a>
+                        <a id="home" href="../">home</a>
                     </li>
                     <li>
-                        <a id="work" href="#projects">projects</a>
+                        <a id="work" href="../projects">projects</a>
                     </li>
                     <li>
-                        <a id="skills" href="#skills">skills</a>
+                        <a id="skills" href="../skills">skills</a>
                     </li>
                     <li>
-                        <a id="gdcd" href="#/gdcd/2013">gdcd</a>
+                        <a id="gdcd" href="../gdcd/2013">gdcd</a>
                     </li>
                 </ul>
             </div>
@@ -71,27 +72,33 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="sidebar overflow">
+                        <div class="sidebar overflow" ng-controller="ContactCtrl">
                             <h2>Welcome to my website. Here you can find info on my latest projects, previous work, skills and the infamous GDCDs...</h2>
                             <h3>recommends</h3>
                             <div class="recommends">
                                 <a href="http://www.weareaugustines.com"></a>
                             </div>
                             <h3>get in contact</h3>
-                            <ul>
-                                <li>
-                                    <input type="text" value="Name" />
-                                </li>
-                                <li>
-                                    <input type="text" value="Email" />
-                                </li>
-                                <li>
-                                    <textarea>Message</textarea>
-                                </li>
-                                <li>
-                                    <a class="btn btn-default">Send</a>
-                                </li>
-                            </ul>
+                            <form name="form" ng-hide="contact.sent">
+                                <ul>
+                                    <li>
+                                        <input type="text" placeholder="Name" class="form-control" ng-model="contact.name" required />
+                                    </li>
+                                    <li>
+                                        <input type="text" placeholder="Email" class="form-control" ng-model="contact.email" required />
+                                    </li>
+                                    <li>
+                                        <textarea placeholder="Message" class="form-control" ng-model="contact.message" required></textarea>
+                                    </li>
+                                    <li>
+                                        <a class="btn btn-default" ng-disabled="form.$invalid" ng-click="send(contact)">Send</a>
+                                    </li>
+                                </ul>
+                            </form>
+                            <div ng-show="contact.sent">
+                                <h2 class="margin-bottom-15">Thank you!</h2>
+                                <p class="p-default">Your enquiry has been received and Greg will be in contact within 24hrs.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
